# feature_engineering

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
src/: main.py
test/: test_main.py  test_response.json  test_response_all.json  test_response_highly_correlated.json  test_response_single_value.json
