[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-engineering"
version = "0.0.1"
authors = [
    { name = "Nektarios Patlakas", email = "nektarios.patlakas@gmail.com" }
]
description = "A feature engineering api /w featuretools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "featuretools==1.26.0",
    "fastapi==0.96.1",
    "uvicorn==0.22.0",
    "pandas==1.5.3"
]